deterministic local integration tests done